# dotfiles

./: .gitattributes  .gitignore  .gitmodules  .stow-local-ignore  .travis.yml  Brewfile  Brewfile-extras  CNAME  Makefile  README.org  amethyst  css.org  default.nix  flake.nix  floorc.json  gitconfig  html.conf.org  index.html  index.org  install.sh  khdrc  my.zsh  shell.nix  spacemacs  style.css  tmux.conf  vimrc.after  wakatime.cfg  zshrc.after.zsh
.github/workflows/: build.yml
LaunchAgents/: com.docker.machine.default.plist
chunkwm/: .chunkwmrc  .chunkwmtilingrc
config/fish/: config.fish  fishd.3c15c2e93512  fishfile
ctags/: .ctags
docs/: CNAME  html.conf.org  index.html  index.org  install.sh
editorconfig/: .editorconfig
git/: .gitconfig  gitconfig  gitignore
idea/: installed.txt
karabiner/: private.xml
khd/: .khdrc
kwm/: binds  kwmrc
lib/: default.nix
overlays/: 00-autolib.nix  00-basic-pkgs.nix  00-emacs-overlay.nix  00-nurpkgs.nix  50-envs.nix  90-apps.nix
overlays/20-xmonad/xmonad/: build  default.nix  peelxmonad.cabal  pkgs.nix  shell.nix  xmobar.conf  xmonad.hs
overlays/20-xmonad/xmonad/.plan.nix/: peelxmonad.nix
overlays/20-xmonad/xmonad/lib/XMonad/Actions/: ConditionalKeys.hs
pinned/: default.nix  emacs-overlay.json  ghcide-nix.json  haskell-nix.json  homemanager.json  nixpkgs.json  nurpkgs.json  sources.json
sbt/: plugins.sbt
spacemacs.d/: init.el  spacemacs.d
stow/: .stow-global-ignore
tmux/: .tmux.conf  config.sh  debug_prompt.sh  prompt.sh  tmux
widgets/: ytd-current.coffee
zsh/: after.zsh  before.zsh
(+408 files in other folders)
