cabal-version:       >=1.10

name:                peelxmonad
version:             0.1.0.0
build-type:          Simple

executable peelxmonad
  main-is:           xmonad.hs
  other-modules:     XMonad.Actions.ConditionalKeys
                   , Monad.Hooks.DynamicProperty
  build-depends:     base >=4.12 && <4.13
                   , xmonad
                   , xmonad-contrib
                   , xmonad-extras
  hs-source-dirs:    lib                   
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -threaded
